Implement JWT logout endpoint with token revocation and update unit tests